--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="app">
             <h2>To Do List</h2>
             <section class="header">
-                <input type="text" placeholder="add new task" id="name">
-                <input type="text" placeholder="description" id="description">
+                <input type="text" placeholder="add new task" id="name" maxlength="10">
+                <input type="text" placeholder="description" id="description" maxlength="30">
                 <div class="addButton" id="addButton"><p>Add</p></div>
             </section>
             <ul>
